fix(#22): improve search button behavior on mobile

--- a/src/app/view/movie-list-item/movie-list-item.component.scss
+++ b/src/app/view/movie-list-item/movie-list-item.component.scss
@@ -6,7 +6,9 @@ mat-card {
   cursor: pointer;
 
   img {
+    display: block;
     width: 100%;
+    object-fit: cover;
   }
 }
 
