--- a/src/app/view/movie-list/movie-list.component.scss
+++ b/src/app/view/movie-list/movie-list.component.scss
@@ -42,6 +42,10 @@ h2 {
 
 .list {
   padding-left: 16px;
+
+  .item {
+    margin-right: 16px;
+  }
 }
 
 mat-spinner {
